add cancel button to fileLoad